--- a/AppFramework.DataAccess/AppFramework.DataAccess/AppFramework.DataAccess.csproj
+++ b/AppFramework.DataAccess/AppFramework.DataAccess/AppFramework.DataAccess.csproj
@@ -44,6 +44,7 @@
     <Compile Include="CE\AppDBConnection\ConnectionCE.cs" />
     <Compile Include="CE\AppDBConnection\ConnectionInfo.cs" />
     <Compile Include="CE\BaseSQL\BaseSQLFuncCE.cs" />
+    <Compile Include="CE\DBConnection\AppSQLConnection.cs" />
     <Compile Include="CE\DBDataTable\AppDataTableCE.cs" />
     <Compile Include="CE\DBScalarResult\AppScalarResultCE.cs" />
     <Compile Include="CE\DBSQLCommand\AppSQLCommandCE.cs" />
@@ -56,7 +57,9 @@
     <Compile Include="Full\DBSQLCommand\AppSQLCommand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Full\DBConnection\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
